# template

./: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  _typos.toml  cliff.toml  deny.toml  df
.github/workflows/: build.yml
docs/: 00.目录.md  01.Rust 安装.md  02.应用安装.md  03.工程管理.md  04.日志配置.md  05.VS Code 配置.md  Rust开发环境配置.md  cargo_config.md  cargo_install.md  git_config.md  git提交流程.md  log_config.md  vscode_config.md  工程创建及提交流程.md  日志及诊断.md  日志及诊断md
